tests/fixtures/compile_errors/string_capacity_mismatch.fe
contract Foo:
    pub def bar() -> string3:
        return string3("too long")